# QANorm

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.web  Plan.md  README.md  SPECIFICATION.md  Tasks.md  alembic.ini  docker-compose.stage2.yml  pyproject.toml
.searxng/: settings.yml
alembic/: env.py
alembic/versions/: 20260303_000001_initial_schema.py  20260308_000002_drop_document_nodes_embedding_index.py  20260308_000003_drop_document_nodes_embedding_column.py  20260309_000004_add_retrieval_chunk_layer.py  20260310_000005_add_trusted_source_cache_entries.py  20260310_000006_add_query_intent_gate_fields.py  20260310_000007_add_query_resolution_metadata.py  20260310_000008_add_evidence_selection_metadata.py  20260311_000002_stage2a_retrieval_schema.py  20260311_000003_drop_legacy_stage2_tables.py  e3fe7afe0b4a_stage2_qa_schema.py
configs/: app.yaml  logging.yaml  qa.yaml  sources.yaml  stage2a.yaml  statuses.yaml  trusted_sources.yaml
deploy/observability/: grafana-dashboards.yml  prometheus.yml  stage2-dashboard.json  tempo.yml
docs/: README.md  agents.md  api.md  architecture.md  configuration.md  data-model.md  operations.md  retrieval.md  security.md  stage2-readiness-20260310.md  stage2a-eval-report-20260316.md  stage2a-mvp-readiness-20260316.md  stage2a-streamlit-smoke.md  stage2b-mvp-readiness-20260317.md  stage2b-streamlit-smoke.md  testing.md
eval/stage2a/: README.md  questions.jsonl
reports/: stage1_full_operational_run_report.md  stage1_known_limitations.md  stage1_readiness_checklist.md  stage2_chunk_retrieval_smoke_report.md  stage2_freshness_refresh_smoke_report.md  stage2_retrieval_dry_run_estimate.md
scripts/: backfill_chunk_embeddings.py  init_db.py  reindex_all.py  run_searxng.ps1  run_worker.py  smoke_stage2_web_ui.py
src/qanorm/: __init__.py  logging.py  settings.py
tests/: __init__.py
tests/integration/: __init__.py  support.py  test_stage2a_conversation_integration.py  (+15 more)
tests/unit/: __init__.py  (+56 more)
web/: next-env.d.ts  package.json
(+214 files in other folders)
